--- a/src/components/layout/projectCard/ProjectCard.module.css
+++ b/src/components/layout/projectCard/ProjectCard.module.css
@@ -15,7 +15,6 @@
 }
 
 .imageContainer {
-    height: 50%;
     width: 100%;
     
     position: relative;
